Module 5/Task4/test-services.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: hashicorp/http-echo:latest
          args:
            - "-text=Hello from Books Service!"
          ports:
            - containerPort: 5678
