Module 5/Task4/user-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: hashicorp/http-echo:latest
          args:
            - "-text=Hello from Users Service!"
          ports:
            - containerPort: 5678
