Module 5/Task4/book-service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-service
spec:
  selector:
    app: book-service
  ports:
    - port: 80
      targetPort: 5678
